--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
     }
     stage('Start container') {
       steps {
-        bat 'docker compose up -d --no-color --wait'    #if the container 
+        bat 'docker compose up -d --no-color --wait'    
         bat 'docker compose ps'
       }
     }
