--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,11 +22,11 @@ pipeline {
       }
     }
   }
-  post {
-    always {
-      bat 'docker compose down --remove-orphans -v'
-      bat 'docker compose ps'
-    }
-  }
+//   post {
+//     always {
+//       bat 'docker compose down --remove-orphans -v'
+//       bat 'docker compose ps'
+//     }
+//   }
 
 }
