--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,3 +35,9 @@ pipeline {
     }
   }
 }
+post {
+    always {
+      bat 'docker compose down --remove-orphans -v'
+      bat 'docker compose ps'
+    }
+  }
